force-app/main/default/objects/OccurrenceGroup__c/OccurrenceGroup__c.object-meta.xml
<CustomObject>
    <label>Occurrence Group</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Occurrence Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>