force-app/main/default/objects/OccurrenceGroup__c/fields/LastOccurrence__c.field-meta.xml
<CustomField>
    <fullName>LastOccurrence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Occurrence</label>
    <referenceTo>Occurrences__c</referenceTo>
    <relationshipLabel>Occurrence Groups</relationshipLabel>
    <relationshipName>OccurrenceGroups</relationshipName>
    <type>Lookup</type>
</CustomField>