force-app/main/default/objects/OccurrenceGroup__c/fields/Responsible1__c.field-meta.xml
<CustomField>
    <fullName>Responsible1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible¹</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Occurrence Groups</relationshipLabel>
    <relationshipName>Occurrence_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>