force-app/main/default/objects/OccurrenceGroup__c/fields/Responsible2__c.field-meta.xml
<CustomField>
    <fullName>Responsible2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible²</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Occurrence Groups (Responsible²)</relationshipLabel>
    <relationshipName>Occurrence_Groups1</relationshipName>
    <type>Lookup</type>
</CustomField>