force-app/main/default/objects/OccurrenceGroup__c/fields/Responsible3__c.field-meta.xml
<CustomField>
    <fullName>Responsible3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible³</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Occurrence Groups (Responsible³)</relationshipLabel>
    <relationshipName>Occurrence_Groups2</relationshipName>
    <type>Lookup</type>
</CustomField>