force-app/main/default/objects/OccurrenceGroup__c/fields/TAG__c.field-meta.xml
<CustomField>
    <fullName>TAG__c</fullName>
    <label>TAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Action plan</fullName>
            </value>
            <value>
                <fullName>Analysis</fullName>
            </value>
            <value>
                <fullName>Equipment Return</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Technical Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>