force-app/main/default/objects/OccurrenceGroup__c/listViews/MV20_Open.listView-meta.xml
<ListView>
    <fullName>MV20_Open</fullName>
    <columns>VesselShortName__c</columns>
    <columns>TAG__c</columns>
    <columns>NAME</columns>
    <columns>Responsible1__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>Deadline__c</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VesselShortName__c</field>
        <operation>equals</operation>
        <value>MV20</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Ongoing,Overdue,Waiting Answer</value>
    </filters>
    <label>MV20 Open</label>
</ListView>