force-app/main/default/objects/OccurrenceGroup__c/listViews/MV22.listView-meta.xml
<ListView>
    <fullName>MV22</fullName>
    <columns>VesselShortName__c</columns>
    <columns>NAME</columns>
    <columns>TAG__c</columns>
    <columns>Description__c</columns>
    <columns>Responsible1__c</columns>
    <columns>StartDate__c</columns>
    <columns>Deadline__c</columns>
    <columns>EndDate__c</columns>
    <columns>Status__c</columns>
    <columns>LastOccurrence__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VesselShortName__c</field>
        <operation>equals</operation>
        <value>MV22</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>MV22</label>
</ListView>