force-app/main/default/objects/OccurrenceGroup__c/listViews/MV27.listView-meta.xml
<ListView>
    <fullName>MV27</fullName>
    <columns>NAME</columns>
    <columns>VesselShortName__c</columns>
    <columns>TAG__c</columns>
    <columns>Description__c</columns>
    <columns>Responsible1__c</columns>
    <columns>StartDate__c</columns>
    <columns>Deadline__c</columns>
    <columns>Status__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VesselShortName__c</field>
        <operation>equals</operation>
        <value>MV27</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Ongoing,Waiting Answer,Overdue</value>
    </filters>
    <label>MV27 Abertos</label>
</ListView>