force-app/main/default/objects/OccurrenceGroup__c/listViews/MV27_Todos.listView-meta.xml
<ListView>
    <fullName>MV27_Todos</fullName>
    <columns>NAME</columns>
    <columns>VesselShortName__c</columns>
    <columns>TAG__c</columns>
    <columns>Description__c</columns>
    <columns>Responsible1__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VesselShortName__c</field>
        <operation>equals</operation>
        <value>MV27</value>
    </filters>
    <label>MV27 Todos</label>
</ListView>